# uofm-competition-bot

./: .gitignore  GAMEPAD_INTEGRATION_COMPLETE.md  GAMEPAD_LAUNCH_GUIDE.md  GAMEPAD_QUICK_START.md  README.md  __init__.py  description.launch.py  duck_run_test.py  paddle_manual.py  paddle_test.py  paddle_test2.py  paddle_test_2.py  quick_motor_test.py  quick_servo_test.py  requirements.txt  secon26_hw_launch.py  servo_motor_test.py  servo_motor_test_2.py  servo_motor_test_3.py  tcp_cmd_sender.py  test_for_pushing.txt  test_motors_and_servos.py
secon26_bringup/: README.md  old_secon26_mission_controller.py  package.xml
secon26_bringup/config/: ekf_params.yaml  slam_toolbox_params.yaml
secon26_bringup/launch/: secon26_hw_launch.py  secon26_master_launch.py  stage1_sensors_launch[1].py  stage3_navigation_launch.py
secon26_bringup/scripts/: dsservo_driver.py
secon26_bringup/urdf/: secon26_bot.urdf
src/gamepad_controller/: README.md  package.xml  setup.cfg  setup.py
src/gamepad_controller/gamepad_controller/: gamepad_controller_node.py
src/gamepad_controller/launch/: gamepad_controller.launch.py
src/robot_bringup/: package.xml
src/robot_bringup/launch/: robot.launch.py  robot_with_gamepad.launch.py
src/robot_description/: package.xml
src/robot_drivers/: package.xml
src/robot_drivers/config/: tb6612_config.yaml
src/robot_effectors/: package.xml
src/robot_effectors/config/: effector_config.yaml
src/robot_effectors/robot_effectors/: crank_controller_node.py  paddle_controller_node.py
src/robot_navigation/: package.xml
src/robot_navigation/robot_navigation/: mission_manager_node.py
src/robot_simulation/: package.xml
src/secon26_bringup/: CMakeLists.txt
src/secon26_bringup/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/secon26_bringup/launch/: secon26_sim_launch.py  stage1_sensors_launch.py  stage2_localization_launch.py  stage3_navigation_launch.py
src/secon26_bringup/scripts/: dsservo_driver.py  ky005_ir_driver.py  mpu9250_driver.py  simple_navigator.py  tb6612_driver.py  tcs34725_driver.py
