<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gamepad_controller</name>
  <version>0.0.1</version>
  <description>Gamepad (XInput/Joystick) to Twist command converter for remote robot control</description>
  <maintainer email="robot@example.com">Robot Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>python3-inputs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
